feat: refactor host auth and remove fingerprint model
